Fix tab panel link layout (remove extra space added by CL 64156947). ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=65381763

--- a/resource/tab_panel.css
+++ b/resource/tab_panel.css
@@ -82,9 +82,8 @@ specific language governing permissions and limitations under the License.
   -webkit-overflow-scrolling:touch;
 }
 
-.cm-tab-content .cm-about-links a {
+.cm-panel-links a {
   display: inline-block;
-  margin: 0 20px 0 0;
 }
 
 .cm-tab-content input[type=checkbox] {
